# Mesh-Viewer

./: CMakeLists.txt  README.md
resource/katana/: starsword.mtl
src/: camera.cpp  camera.h  has_been_messed_with.cpp  mesh.cpp  mesh.h  shader.h
